# linoratix-svn

dev/: todo.txt
dev/build-tool/: buildtool.pl
dev/build-tool/lang/: de.lang.pl
dev/depricated/ldb/: Makefile  checkdeps.sh  libldb.cpp  main.cpp
dev/depricated/ldb/sqlite3/: Makefile  libtool  sqlite3.pc
dev/distribution/SysGuard/: Makefile  SysGuard.sh  libSysGuard.c
dev/distribution/lip/lbuild/: bash.lbuild  binutils.lbuild  bison.lbuild  build.conf  build_script.sh  bzip2.lbuild  coreutils.lbuild  dejagnu.lbuild  diffutils.lbuild  distcc.lbuild  expect.lbuild  fakeroot.lbuild  findutils.lbuild  flex.lbuild  functions.sh  gawk.lbuild  gcc3.lbuild  gettext.lbuild  glibc.lbuild  grep.lbuild  gzip.lbuild  lbuild_patch.pl  linux-libc-headers.lbuild  m4.lbuild  make.lbuild  man-pages.lbuild  ncurses.lbuild  parser.pl  patch.lbuild  perl.lbuild  sed.lbuild  soapbox.lbuild  sqlite3.lbuild  stage1.sh  stage2.sh  stage2_chroot.sh  t  tar.lbuild  tcl.lbuild  template.lbuild  (+3 more)
dev/distribution/lip/lbuild/Linoratix/: Array.pm  Lbuild.pm
dev/distribution/lip/lbuild/patches/: binutils-2.15.94.0.2.2-posix-1.patch  coreutils-5.2.1-suppress_uptime_kill_su-1.patch  gcc-3.4.3-fix_configure_for_target_native-1.patch  gcc-3.4.3-posix-1.patch  gcc-3.4.3-specs-2.patch  glibc-2.3.4-fix_test-1.patch
dev/distribution/lip/liblpm/src/: Makefile  lpm.c  lpm.h  resource.c  resource.h  test.c  test.lip
dev/distribution/ports/app-arch/bzip2/: REBUILD
dev/distribution/ports/app-arch/gzip/: REBUILD
dev/distribution/ports/app-arch/tar/: REBUILD
dev/distribution/ports/app-documentation/: DESC
dev/distribution/ports/app-documentation/groff/: REBUILD
dev/distribution/ports/app-documentation/help2man/: REBUILD
dev/distribution/ports/app-documentation/man/: REBUILD
dev/distribution/ports/app-documentation/texinfo/: REBUILD
dev/distribution/ports/app-editor/: DESC
dev/distribution/ports/app-editor/vim/: REBUILD
dev/distribution/ports/con-editors/nano/: REBUILD
dev/distribution/ports/con-libs/: DESC
dev/distribution/ports/con-libs/gpm/: REBUILD
dev/distribution/ports/con-utils/less/: REBUILD
dev/distribution/ports/con-utils/screen/: REBUILD
dev/distribution/ports/crypto-libs/openssl/: REBUILD
dev/distribution/ports/include/: gnu_system_build.lif  perl_module_build.lif
dev/distribution/ports/net-utils/: DESC
dev/distribution/ports/sys-boot/: DESC
dev/distribution/ports/sys-flavors/: DESC
dev/ldb/: Makefile  checkdeps.sh  libldb.cpp  libldb.h  libpm.cpp  main.cpp  mysql.cpp  sqlite.cpp
dev/ldb-edit/: ldb-edit.h
dev/ldb/sqlite3/: Makefile  config.status
dev/linoratix-config/: linoratix-config
dev/linoratix-config/modules/: LILO.pm  LIP.pm  LIPbase.pm  LIPdev.pm  Linoratix.pm  base.pm  eth.pm
dev/lip.new/libpm/: libpm.cpp  makefile
dev/lip.new/so-sample/: doit.sh  libtest.h  test.cpp
dev/lip/libpm/: db.txt  libpm.cpp  libpm.h  makefile
dev/lip/libpm/sqlite3/: Makefile  config.status  libtool  sqlite.pc
dev/lip/libpm/sqlite3/src/: doit.sh
dev/lip/so-sample/: doit.sh  libtest.cpp
dev/setup/: setup.pl
dev/setup/lang/: de.lang.pl
dev/setup/libs/libpartedpp/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  configure  configure.in  conftest
dev/setup/libs/libpartedpp/src/: Makefile.am  Makefile.in  alignment.cc  alignment.h  constraint.cc  constraint.h  device.cc  device.h  disk.cc  disk.h  disktype.cc  disktype.h  exception.cc  exception.h  filesystem.cc  filesystem.h  filesystemtype.cc  filesystemtype.h  geometry.cc  geometry.h  partedpp.h  partition.cc  partition.h  timer.cc  timer.h  timerhandler.cc  timerhandler.h
dev/setup/libs/libpartedpp/test/: Makefile.am  Makefile.in  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc
dev/setup/tools/createpart/: Makefile  createpart.cpp
dev/setup/tools/partinfo/: Makefile  partinfo.cpp
private/affi/ldb-edit/: MainFrame.cpp  MainFrame.h  Makefile  ldb-edit.cpp  ldb-edit.h
private/jfried/testing/setup/: setup.pl
private/jfried/tools/tagging/: TAG_TESTING
testing/distribution/ports/app-arch/: DESC
testing/distribution/ports/crypto-libs/: DESC
testing/distribution/ports/dev-lang/: DESC
testing/distribution/ports/dev-libs/: DESC
testing/distribution/ports/net-libs/: DESC
testing/distribution/ports/sys-base/: DESC
testing/distribution/ports/sys-kernel/: DESC
testing/distribution/ports/sys-libs/: DESC
testing/distribution/ports/sys-logd/: DESC
testing/distribution/ports/sys-shell/: DESC
testing/linoratix-config/modules/: Kernel.pm  LIP.pm  LIPbase.pm  Linoratix.pm  OpenVPN.pm
(+424 files in other folders)
