dnl a source file from your sub dir
AC_INIT(aclocal.m4)

LIBPARTEDPP_MAJOR_VERSION=0
LIBPARTEDPP_MINOR_VERSION=1
LIBPARTEDPP_MICRO_VERSION=0

LIBPARTEDPP_SO_VERSION=1:0:0

LIBPARTEDPP_VERSION=$LIBPARTEDPP_MAJOR_VERSION.$LIBPARTEDPP_MINOR_VERSION.$LIBPARTEDPP_MICRO_VERSION

VERSION=$LIBPARTEDPP_VERSION

LIBPARTEDPP_RELEASE=$LIBPARTEDPP_MAJOR_VERSION.$LIBPARTEDPP_MINOR_VERSION
AC_DEFINE_UNQUOTED(LIBPARTEDPP_MAJOR_VERSION, $LIBPARTEDPP_MAJOR_VERSION)
AC_DEFINE_UNQUOTED(LIBPARTEDPP_MINOR_VERSION, $LIBPARTEDPP_MINOR_VERSION)
AC_DEFINE_UNQUOTED(LIBPARTEDPP_MICRO_VERSION, $LIBPARTEDPP_MICRO_VERSION)
AC_DEFINE_UNQUOTED(LIBPARTEDPP_VERSION, "$LIBPARTEDPP_VERSION")
AC_SUBST(LIBPARTEDPP_VERSION)
AC_SUBST(LIBPARTEDPP_RELEASE)
AC_SUBST(LIBPARTEDPP_SO_VERSION)

LIBS=-ldl

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM

dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here.
AM_INIT_AUTOMAKE(libpartedpp,$VERSION)

dnl make /usr the default for the installation
AC_PREFIX_DEFAULT(/usr)

if test "x$prefix" = "xNONE"; then
  prefix=$ac_default_prefix
  ac_configure_args="$ac_configure_args --prefix $prefix"
fi

dnl Specify a configuration file (no autoheader)
AM_MAINTAINER_MODE

dnl without this order in this file, automake will be confused!
dnl AM_CONFIG_HEADER(config.h)

dnl C compiler checks
AC_PROG_CC

dnl libparted check
PARTED_CHECK_LIBPARTED(1.6.0, , [AC_MSG_ERROR([*** libparted >= 1.6.0 not installed - please install first ***])])

dnl C++ compiler checks
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP

dnl libtool check
AM_PROG_LIBTOOL

dnl language is c++
AC_LANG_CPLUSPLUS

dnl unsetting LIBS
unset LIBS

dnl create only shared libtool-libraries
AC_ENABLE_SHARED(yes)

dnl set the following to yes, if you want to create static
dnl libtool-libraries, too.
AC_ENABLE_STATIC(yes)

all_libraries="$all_libraries $USER_LDFLAGS"
all_includes="$all_includes $USER_INCLUDES"
AC_SUBST(all_includes)
AC_SUBST(all_libraries)

AC_SUBST(AUTODIRS)

AC_OUTPUT( \
./Makefile \
src/Makefile \
test/Makefile \
)
