### The normal program ###
bin_PROGRAMS = test1 test2 test3 test4 test5

test1_SOURCES = test1.cc
test1_LDADD = -L../src/ -lpartedpp -ldl

test2_SOURCES = test2.cc
test2_LDADD = -L../src/ -lpartedpp -ldl

test3_SOURCES = test3.cc
test3_LDADD = -L../src/ -lpartedpp -ldl

test4_SOURCES = test4.cc
test4_LDADD = -L../src/ -lpartedpp -ldl

test5_SOURCES = test5.cc
test5_LDADD = -L../src/ -lpartedpp -ldl

